--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+
+/*header {
+    height: 80px;
+}
+*/
 .logo {
     display: flex;
     justify-content: center;
@@ -74,37 +79,138 @@ li .dropdown {
     text-align: left;
 }
   
-.dropdown-content a:hover {background-color: #f1f1f1;
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
 }
   
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-
-.content {
-    margin: 20px auto;
-    display: inline;
-}
-.content h3 {
-    margin-top: 20px;
-    padding-left: 20px;
+header h4 {
+    padding: 3px 10px;
+    float: right;
+    background-color: rgba(241, 238, 233, 0.5);
     text-decoration: underline;
     text-transform: uppercase;
 }
-.content h6 {
-    background-color: rgba(241, 238, 233, 0.5);
-    float: right;
-    padding: 3px 10px;
-    text-transform: uppercase;
-    
+
+.content {
+    margin: 20px auto;
+    display: inline-flex;
 }
 
-form {
-    margin: 30px auto;
+.allForms {
+    display: block;
+    margin-right: 40px;
+}
+
+.choices {
+    margin-top: 60px;
+    margin-left: 30px;
+    margin-right: 70px;
+}
+
+.choixClient {
+    background: rgba(0, 195, 199, 0.51);
+    width: 250px;
+    height: 150px;
+    margin-bottom: 30px;
+}
+
+.choixClient h5 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: rgba(241, 238, 233, 0.5);
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+.choixClient input {
+    margin: 15px 5px 5px 30px;   
+}
+
+.choixClient label {
+    margin-left: 2px;
+    padding-left: 3px;
+    text-decoration: none;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+.choixCompte {
+    background:rgba(241, 238, 233, 0.5);
+    width: 250px;
+    height: 150px;
+}
+
+.choixCompte h5 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    background:  rgba(0, 195, 199, 0.51);
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+.choixCompte input {
+    margin: 15px 5px 5px 30px;   
+}
+
+.choixCompte label {
+    margin-left: 2px;
+    padding-left: 3px;
+    text-decoration: none;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+.situationPro {
+    padding-top: 15px;
+    text-align: center;
     background: rgba(0, 195, 199, 0.51);
     width: 900px;
-    height: 550px;
+    height: 70px;
+}
+.situationPro h6 {
+    text-decoration: underline;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 15px;
+}
+
+.situationPro label {
+    padding-left: 3px;
+    text-decoration: none;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+.separate {
+    margin-bottom: 0;
+    width: 900px;
+    height: 2px;
+    background-color: white;
+}
+
+.myFormPhysique, 
+.myFormEntreprise {
+    margin-top: 5px;
+    float: right;
+    margin-right: 30px;
+    background: rgba(0, 195, 199, 0.51);
+    width: 900px;
+    height: 500px;
 }
 
 .flexform {
@@ -112,45 +218,107 @@ form {
 }
 
 #form1, #form2{
-    margin: 30px 50px 20px;
+    margin: 30px 50px 0px;
 }
 
-.myForm input[type="text"], 
-.myForm input[type="password"], 
+.myFormPhysique input[type="text"], 
+.myFormEntreprise input[type="text"],
 textarea,
 select {
     border: 0;
     background: white;
-    margin: 5px 0 5px;
-    text-align: center;  
-    border: 3px solid white;
-    padding: 5px 10px;
+    margin: 5px 5px;  
+    border: 1px solid white;
+    padding: 10px 10px;
     width: 300px;
     outline: none;
     color: black;
     font-size: 20px;
-    border-radius: 20px;
+    border-radius: 5px;
     transition: 0,5s;
 }
 
-.myForm input[type="text"]:focus, 
-.myForm input[type="password"]:focus,
+.myFormPhysique label, 
+.myFormEntreprise label,
+textarea,
+select {
+    color: black;
+    font-size: 15px;
+}
+
+.myFormPhysique input[type="text"]:focus, 
+.myFormEntreprise input[type="text"]:focus,
 textarea:focus,
 select:focus {
+    border-color:black;
+    width: 320px;
+}
+
+.myFormCompteBloque,
+.myFormCompteCourant,
+.myFormCompteEpargne {
+    margin-top: 30px;
+}
+
+.myFormCompteBloque input[type="text"],
+.myFormCompteBloque input[type="date"],
+.myFormCompteEpargne input[type="text"],
+.myFormCompteCourant input[type="text"] {
+    border: 0;
+    background: white;
+    margin: 30px;
+    text-align: center;  
+    border: 1px solid green;
+    padding: 5px 10px;
+    width: 300px;
+    outline: none;
+    color: black;
+    font-size: 14px;
+    border-radius: 5px;
+    transition: 0,5s;
+}
+
+.myFormCompteBloque input[type="text"]:focus,
+.myFormCompteEpargne input[type="text"]:focus,
+.myFormCompteCourant input[type="text"]:focus {
     border-color: green;
     width: 350px;
 }
 
-form p {
-    color: red;
-    text-align: center;
-    text-decoration: none;
+.myFormPhysique input[type="text"], 
+.myFormEntreprise input[type="text"],
+textarea,
+select {
+    font-size: 14px;
+}
+.myFormCompteBloque fieldset label,
+.myFormCompteEpargne fieldset label,
+.myFormCompteCourant fieldset label {
+    margin-top: 35px;
+}
+
+.myFormCompteBloque fieldset,
+.myFormCompteEpargne fieldset,
+.myFormCompteCourant fieldset {
+    background-color: rgba(241, 238, 233, 0.5);
+}
+      
+legend {
+    background-color:rgba(0, 195, 199, 0.51);
+    color: white;
+    padding: 10px 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+label {
+    margin-left: 50px;
+    margin-top: 30px;
 }
 
 .btns input{
     display: inline-flex;
-    margin: 40px auto;
-    width: 120px;
+    margin: 0;
+    width: 100px;
     border: 0;
     background: white;
     text-transform: uppercase;
@@ -160,19 +328,19 @@ form p {
 }
 
 .btns input[type="submit"] {
-    padding: 10px 2%;
-    border: 3px solid green;  
+    padding: 7px;
+    border: 1px solid green;  
 }
 
 .btns input[type="submit"]:hover {
-    border: 3px solid rgb(76, 233, 76);
+    border: 1px solid rgb(76, 233, 76);
     color: white;
     background: rgb(0, 128, 11);  
 }
 
 .btns input[type="reset"] {
-    padding: 10px 3%;
-    border: 3px solid red;
+    padding: 7px;
+    border: 1px solid red;
 }
 
 .btns input[type="reset"]:hover {
