--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -101,9 +103,14 @@ header h4 {
 }
 
 .allForms {
-    display: block;
+    display: none;
+}
+.allForms form {
+    display: flex;
+    flex-direction: column;
     margin-right: 40px;
 }
+
 
 .choices {
     margin-top: 60px;
@@ -174,7 +181,54 @@ header h4 {
     font-weight: bold;
 }
 
+
+.search {
+    margin-bottom: 10px;
+    margin-top: 40px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    background: rgba(0, 195, 199, 0.51);
+}
+
+.search:hover{
+    margin-bottom: 10px;
+    margin-top: 40px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    background:white;
+    color: #000;
+}
+.search_box {
+    display: none;
+    width: 600px;
+    position: relative;
+}
+  
+.search_box input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    padding-right: 60px;
+    box-sizing: border-box;
+    background:white;
+    border: 2px solid rgba(0, 195, 199, 0.51);
+    border-radius: 10px;
+    font-size: 18px;
+    color: #000;
+    outline: none;
+}
+  
+.fa-search {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 25px;
+    color: gray;
+    font-size: 25px;
+}
 .situationPro {
+    display: none;
     padding-top: 15px;
     text-align: center;
     background: rgba(0, 195, 199, 0.51);
@@ -196,21 +250,23 @@ header h4 {
     letter-spacing: 1px;
 }
 
-.separate {
-    margin-bottom: 0;
-    width: 900px;
-    height: 2px;
-    background-color: white;
-}
 
-.myFormPhysique, 
-.myFormEntreprise {
+.myFormPhysique {
+    display: none;
     margin-top: 5px;
-    float: right;
     margin-right: 30px;
     background: rgba(0, 195, 199, 0.51);
     width: 900px;
-    height: 500px;
+    height: 470px;
+}
+
+.myFormEntreprise {
+    display: none;
+    margin-top: 5px;
+    margin-right: 30px;
+    background: rgba(0, 195, 199, 0.51);
+    width: 900px;
+    height: 365px;
 }
 
 .flexform {
@@ -223,8 +279,7 @@ header h4 {
 
 .myFormPhysique input[type="text"], 
 .myFormEntreprise input[type="text"],
-textarea,
-select {
+textarea {
     border: 0;
     background: white;
     margin: 5px 5px;  
@@ -239,17 +294,14 @@ select {
 }
 
 .myFormPhysique label, 
-.myFormEntreprise label,
-textarea,
-select {
+.myFormEntreprise label {
     color: black;
     font-size: 15px;
 }
 
 .myFormPhysique input[type="text"]:focus, 
 .myFormEntreprise input[type="text"]:focus,
-textarea:focus,
-select:focus {
+textarea:focus {
     border-color:black;
     width: 320px;
 }
@@ -258,6 +310,8 @@ select:focus {
 .myFormCompteCourant,
 .myFormCompteEpargne {
     margin-top: 30px;
+    width: 900px;
+    display: none;
 }
 
 .myFormCompteBloque input[type="text"],
@@ -287,25 +341,33 @@ select:focus {
 
 .myFormPhysique input[type="text"], 
 .myFormEntreprise input[type="text"],
-textarea,
-select {
+textarea {
     font-size: 14px;
 }
+
 .myFormCompteBloque fieldset label,
 .myFormCompteEpargne fieldset label,
 .myFormCompteCourant fieldset label {
     margin-top: 35px;
 }
 
-.myFormCompteBloque fieldset,
-.myFormCompteEpargne fieldset,
+.myFormCompteBloque fieldset {
+    background-color: rgba(241, 238, 233, 0.5);
+    height: 320px;
+}
+.myFormCompteEpargne fieldset {
+    background-color: rgba(241, 238, 233, 0.5);
+    height: 230px;
+}
 .myFormCompteCourant fieldset {
     background-color: rgba(241, 238, 233, 0.5);
+    height: 230px;
 }
       
 legend {
     background-color:rgba(0, 195, 199, 0.51);
     color: white;
+    font-weight: bold;
     padding: 10px 10px;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -313,6 +375,13 @@ legend {
 label {
     margin-left: 50px;
     margin-top: 30px;
+}
+
+.btns {
+    display: none;
+    margin-top: 40px;
+    float: right;
+    margin-right: 400px;
 }
 
 .btns input{
@@ -339,7 +408,7 @@ label {
 }
 
 .btns input[type="reset"] {
-    padding: 7px;
+    padding: 7px 10%;
     border: 1px solid red;
 }
 
